assets/css/main.css
/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ===== Initializr Styles ==================================================
   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
   ========================================================================== */

body {
    font: 16px/26px Helvetica, Helvetica Neue, Arial;
}

.wrapper {
    width: 90%;
    margin: 0 5%;
}

/* ==============
    MOBILE: Menu
   ============== */

nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

nav a {
    display: block;
    margin-bottom: 10px;
    padding: 15px 0;

    text-align: center;
    text-decoration: none;
    font-weight: bold;

    color: white;
    background: #e44d26;
}

nav a:hover,
nav a:visited {
    color: white;
}

nav a:hover {
    text-decoration: underline;
}

/* ==============
    MOBILE: Main
   ============== */

.main {
    padding: 30px 0;
}

.main article h1 {
    font-size: 2em;
}

.main aside {
    color: white;
    padding: 0px 5% 10px;
}

.footer-container footer {
    color: white;
    padding: 20px 0;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');

body {
    background-color: #222529;
    color: white;
    font-family: "Source Sans Pro", sans-serif;
    font-weight: 300;
}

section button, section input, section select {
  color: black;
}

.main {
  display: grid;
  grid-gap: 10px;
  grid-template-columns: 1fr;
}

.main.report {
  display: block;
}

header.wrapper {
    width: 100%;
    padding: 0 5%;
    margin: 0;
    box-sizing: border-box;
    background-color: #303439;
}
h1.title {
    position: absolute;
    top: 0;
    left: 0;
    width: 5%;
    font-size: 1.5em;
    margin: 0;
    padding: 0;
    text-align: center;
}

nav + nav {
    background-color: #3b4045;
    overflow: auto;
    box-sizing: border-box;
    margin-left: -5.5555%;
    width: 111.1111%;
}
nav + nav ul li a {
    background-color: transparent;
    padding: 10px 2%;
    font-weight: normal;
    font-size: 90%;
}

article {
    background-color: #393e44;
    border-radius: 6px;
    box-sizing: border-box;
    padding: 1em;
    margin: 0.5em 0;
    color: white;
    font-weight: 300;
    position: relative;
    padding-top: 2.5em;
    max-height: 21em;
    overflow-y: auto;
    overflow-x: hidden;
    box-shadow: 4px 4px 9px rgba(0,0,0,0.5);
}

article canvas {
    max-height: 12em;
}
article.wide { grid-column: auto / span 2; }


h2.incexcorg {
    grid-column: auto / span 1;
    width: 100%;
    text-align: right;
    font-size: 1em;
    font-weight: 100;
}
h2.incexcorg a {
    text-decoration: none;
}
h2.incexcorg img {
    vertical-align: top;
    height: 24px;
    margin-left: 5px;
}

@media only screen and (min-width: 480px) {
  .main { grid-template-columns: 1fr 1fr; }
  h2.incexcorg { grid-column: auto / span 2; }
}
@media only screen and (min-width: 800px) {
  .main { grid-template-columns: 1fr 1fr 1fr; }
  h2.incexcorg { grid-column: auto / span 3; }
}
@media only screen and (min-width: 1400px) {
  .main { grid-template-columns: 1fr 1fr 1fr 1fr; }
  h2.incexcorg { grid-column: auto / span 4; }
}

h1 { font-weight: 300; }

a { color: white; text-decoration: none;}

footer h3 {
    font-weight: 100;
    text-align: right;
    opacity: 0.4;
}

.main article h1 {
    font-size: 100%;
    position: absolute;
    top: 10px;
    left: 10px;
    padding: 0;
    margin: 0;
    color: white;
}
header h1 a { text-decoration: none; }
header h2 {
    font-weight: 100;
    margin: 0;
    padding: 0;
}
h1.title, header h2 {
    padding: 1em 0;
}

nav + nav li a::before {
    display: inline-block;
    height: 25px;
    width: 25px;
    margin-right: 5px;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: contain;
    content: "";
    vertical-align: middle;
    margin-top: -2px;
}
/*
Noun Project:
https://thenounproject.com/term/company-organization/748326
https://thenounproject.com/term/dashboard/1237026
https://thenounproject.com/term/statistics/789906
https://thenounproject.com/latyshevaoksana/collection/vending-machine/?i=880796
*/
nav + nav li a.nav-repos::before { background-image: url(../img/Dashboards.svg); height: 18px; width: 18px; }
nav + nav li a.nav-orgs::before { background-image: url(../img/Groups.svg); }
nav + nav li a.nav-teams::before { background-image: url(../img/Teams.svg); }
nav + nav li a.nav-overview::before { background-image: url(../img/Overview.svg); }
nav + nav li a.highlight span {
    border-bottom: 2px solid #4dced0;
    padding-bottom: 1px;
}
nav + nav li a.highlight.nav-repos::before { background-image: url(../img/Dashboards-highlighted.svg); }
nav + nav li a.highlight.nav-orgs::before { background-image: url(../img/Groups-highlighted.svg); }
nav + nav li a.highlight.nav-teams::before { background-image: url(../img/Teams-highlighted.svg); }
nav + nav li a.highlight.nav-overview::before { background-image: url(../img/Overview-highlighted.svg); }
/* ... */

